Increase Java version, fix GoPay serialization issue