@@ -35,6 +35,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.UnsupportedEncodingException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.security.GeneralSecurityException;
@@ -63,7 +64,7 @@ public abstract class AuthenticationControllerProvider {
    }
 
    private static JSONObject readJsonFromUrl(String url) throws IOException, ParseException {
-      final InputStream is = new URL(url).openStream();
+      final InputStream is = URI.create(url).toURL().openStream();
       try {
          final BufferedReader rd = new BufferedReader(new InputStreamReader(is, Charset.forName("UTF-8")));
          final String jsonText = readAll(rd);
